reworking repository list to not use table view

--- a/src/app/repository/list.html
+++ b/src/app/repository/list.html
@@ -1,49 +1,24 @@
 <md-card>
 
-  <md-toolbar class="md-table-toolbar md-default" ng-hide="options.rowSelection && selected.length">
+  <md-toolbar class="md-hue-3">
     <div class="md-toolbar-tools">
-      <md-input-container flex style="width: 100%;">
-        <label>Search</label>
-        <input type="text" ng-model="$ctrl.query.search" ng-change="$ctrl.changeViewOption()">
-      </md-input-container>
+      <h2>Repositories</h2>
       <div flex></div>
-      <md-button class="md-fab md-primary" ng-click="loadStuff()">
+      <md-button class="md-fab md-mini md-primary" aria-label="Upload" ng-click="$ctrl.createDirectory($event)">
         <md-icon>add</md-icon>
       </md-button>
     </div>
   </md-toolbar>
 
-  <md-table-container>
-    <table md-table md-row-select multiple ng-model="$ctrl.selected">
-      <thead md-head>
-        <tr md-row>
-          <th md-column><span>Name</span></th>
-          <th md-column><span>Default Distribution</span></th>
-          <th md-column><span>Default Component</span></th>
-          <th md-column><span>Comment</span></th>
-        </tr>
-      </thead>
-      <tbody md-body>
-        <tr md-row md-select="repository" ng-repeat="repository in $ctrl.repositoryList">
-          <td md-cell>{{ repository.Name }}</td>
-          <td md-cell>{{ repository.DefaultDistribution }}</td>
-          <td md-cell>{{ repository.DefaultComponent }}</td>
-          <td md-cell>{{ repository.Comment }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </md-table-container>
+  <md-list>
 
-  <md-table-pagination
-    md-limit="$ctrl.paginateOptions.limit"
-    md-limit-options="$ctrl.paginateOptions.limitOptions"
-    md-page="$ctrl.page"
-    md-total="{{$ctrl.paginateOptions.total}}"
-    md-page-select="$ctrl.paginateOptions.pageSelect"
-    md-boundary-links="$ctrl.paginateOptions.boundaryLinks"
-    md-on-paginate="$ctrl.f">
-  </md-table-pagination>
+    <md-list-item ng-click="$ctrl.viewFiles(directory)" ng-repeat-start="directory in $ctrl.directoryList">
+        <p>{{  }}</p>
+        <md-icon class="md-secondary" ng-click="" aria-label="Chat">input</md-icon>
+        <md-icon class="md-secondary" ng-click="$ctrl.deleteDirectory(directory)" aria-label="Chat">delete</md-icon>
+    </md-list-item>
+    <md-divider ng-repeat-end ng-if="!$last"></md-divider>
+
+  </md-list>
 
 </md-card>
-
-  <md-button ng-click="$ctrl.logOptions()">LOG</md-button>
