--- a/src/app/upload/import.html
+++ b/src/app/upload/import.html
@@ -8,17 +8,18 @@
 
     <md-dialog-content>
 
-      <div layout="row">
-        <md-input-container flex>
-          <label>Repositories<label>
-          <md-select aria-label="None" ng-model="$ctrl.repositoryTarget">
-            <md-option ng-value="repository.Name" ng-repeat="repository in $ctrl.repositoryList">{{ repository.Name }}</md-option>
+      <div layout="column">
+        <md-input-container>
+          <md-select placeholder="Repository Name" ng-model="$ctrl.repositoryTarget">
+            <md-option ng-value="repository" ng-repeat="repository in $ctrl.repositoryList">{{ repository.Name }}</md-option>
           </md-select>
         </md-input-container>
-      </div>
-
-      <div>
-        {{ $ctrl.repositoryTarget }}
+        <md-switch ng-model="$ctrl.noRemove" aria-label="No Remove">
+          No Remove
+        </md-switch>
+        <md-switch ng-model="$ctrl.forceReplace" aria-label="Force Replace">
+          Force Replace
+        </md-switch>
       </div>
 
     </md-dialog-content>
