removed cloneToCamelCase http interceptor. no longer requried

--- a/src/app/repository/repoList.html
+++ b/src/app/repository/repoList.html
@@ -13,7 +13,7 @@
   <md-list>
 
     <md-list-item ng-click="$ctrl.viewPackages(repository)" ng-repeat-start="repository in $ctrl.repositoryList">
-      <p>{{ repository.name }}</p>
+      <p>{{ repository.Name }}</p>
       <md-icon class="md-secondary" ng-click="" aria-label="Chat">input</md-icon>
       <md-icon class="md-secondary" ng-click="$ctrl.deleteRepository(repository)" aria-label="Chat">delete</md-icon>
     </md-list-item>
